# claw-auto-transcriber

./: .env.template  .gitignore  CURSOR_TOOL_DOCS.md  Dockerfile  KELVIN_JUNIOR_TASK.md  PLAN.md  PROJECT_SPEC.md  README.md  TASK_TRACKER.md  audio_processor.py  docker-compose.yml  logger.py  mcp_server.py  pyproject.toml  requirements.txt
deployment/: claw-transcriber.service  env.template
docs/: mcp-client-config.md  setup.md  usage-examples.md
src/: __init__.py  async_output_writer.py  async_queue.py  async_worker.py  audio_processor.py  cli.py  config.py  logger.py  mcp_server.py  transcriber.py  vad_chunker.py
tests/: __init__.py  conftest.py  test_async_output_writer.py  test_async_queue.py  test_async_worker.py  test_audio_processor.py  test_cli.py  test_config.py  test_integration.py  test_logger.py  test_mcp_server.py  test_soundfile_fallback.py  test_tools.py  test_transcribe_audio_async.py  test_transcriber.py  test_vad_chunker.py
tests/fixtures/: .gitkeep
tools/: __init__.py  transcribe_audio.py  transcribe_audio_async.py
